# clawbit

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
clawbit-hook/: Cargo.toml
clawbit-hook/src/: main.rs
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/emotion/: analyzer.rs  mod.rs  state.rs
src-tauri/src/hooks/: installer.rs
src-tauri/src/ipc/: server.rs
src-tauri/src/models/: hook_event.rs  mod.rs  pet_state.rs
src-tauri/src/session/: store.rs
src-tauri/src/settings/: mod.rs  store.rs
src-tauri/src/sound/: mod.rs  player.rs
src-tauri/src/state/: machine.rs  mod.rs
src-tauri/src/stats/: collector.rs  mod.rs
src/panel/: panel.js
src/pet/: renderer.js  sprites.js
src/styles/: base.css
